force-app/main/default/objects/GuestroomType__c/GuestroomType__c.object-meta.xml
<CustomObject>
    <label>Guestroom Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guestroom Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>