force-app/main/default/objects/GuestroomType__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Room Type Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>