force-app/main/default/objects/GuestroomType__c/fields/AlternateAbbreviation__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviation__c</fullName>
    <label>Alternate Room Type Code</label>
    <length>24</length>
    <type>Text</type>
</CustomField>