force-app/main/default/objects/GuestroomType__c/fields/AlternateAbbreviationDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationDE__c</fullName>
    <description>Abbreviation in German.</description>
    <inlineHelpText>Abbreviation in German.</inlineHelpText>
    <label>Alternate Abbreviation DE</label>
    <length>24</length>
    <type>Text</type>
</CustomField>