force-app/main/default/objects/GuestroomType__c/fields/AlternateAbbreviationIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationIT__c</fullName>
    <description>Abbreviation in Italian.</description>
    <inlineHelpText>Abbreviation in Italian.</inlineHelpText>
    <label>Alternate Abbreviation IT</label>
    <length>24</length>
    <type>Text</type>
</CustomField>