force-app/main/default/objects/GuestroomType__c/fields/AlternateAbbreviationJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationJA__c</fullName>
    <description>Room Type Code in Japanese.</description>
    <inlineHelpText>Room Type Code in Japanese.</inlineHelpText>
    <label>Alternate Abbreviation JA</label>
    <length>24</length>
    <type>Text</type>
</CustomField>