force-app/main/default/objects/GuestroomType__c/fields/AlternateAbbreviationTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationTR__c</fullName>
    <description>Room Type Code in Turkish.</description>
    <inlineHelpText>Room Type Code in Turkish.</inlineHelpText>
    <label>Alternate Abbreviation TR</label>
    <length>24</length>
    <type>Text</type>
</CustomField>