force-app/main/default/objects/GuestroomType__c/fields/AlternateAbbreviationZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationZHTW__c</fullName>
    <description>Abbreviation in Chinese (Traditional).</description>
    <inlineHelpText>Abbreviation in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Abbreviation ZHTW</label>
    <length>24</length>
    <type>Text</type>
</CustomField>