force-app/main/default/objects/GuestroomType__c/fields/AlternateLanguageCode__c.field-meta.xml
<CustomField>
    <fullName>AlternateLanguageCode__c</fullName>
    <label>Alternate Language Code</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>ZH</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>