force-app/main/default/objects/GuestroomType__c/fields/AlternateNameFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameFR__c</fullName>
    <description>Name in French.</description>
    <inlineHelpText>Name in French.</inlineHelpText>
    <label>Alternate Name FR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>