force-app/main/default/objects/GuestroomType__c/fields/AlternateNamePTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateNamePTBR__c</fullName>
    <description>Name in Portuguese (Brazil).</description>
    <inlineHelpText>Name in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Name PTBR</label>
    <length>80</length>
    <type>Text</type>
</CustomField>