force-app/main/default/objects/GuestroomType__c/fields/AlternateNameZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameZHCN__c</fullName>
    <description>Name in Chinese (Simplified).</description>
    <inlineHelpText>Name in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Name ZHCN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>