force-app/main/default/objects/GuestroomType__c/fields/DoubleAllocation__c.field-meta.xml
<CustomField>
    <fullName>DoubleAllocation__c</fullName>
    <label>Double Allocation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>