force-app/main/default/objects/GuestroomType__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <label>External ID</label>
    <length>174</length>
    <type>Text</type>
</CustomField>