force-app/main/default/objects/GuestroomType__c/fields/GuestroomCategory__c.field-meta.xml
<CustomField>
    <fullName>GuestroomCategory__c</fullName>
    <label>Guestroom Category</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>SetupValue__c</referenceTo>
    <relationshipLabel>Guestroom Types (Category)</relationshipLabel>
    <relationshipName>GuestroomTypesCategory</relationshipName>
    <type>Lookup</type>
</CustomField>