force-app/main/default/objects/GuestroomType__c/fields/GuestroomCategoryName__c.field-meta.xml
<CustomField>
    <fullName>GuestroomCategoryName__c</fullName>
    <label>Guestroom Category</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>