force-app/main/default/objects/GuestroomType__c/fields/IsRunOfHouse__c.field-meta.xml
<CustomField>
    <fullName>IsRunOfHouse__c</fullName>
    <label>Is Run Of House</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>