force-app/main/default/objects/GuestroomType__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Property</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Guestroom Types</relationshipLabel>
    <relationshipName>GuestroomTypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>