force-app/main/default/objects/GuestroomType__c/fields/LSDefaultBudgetedRate__c.field-meta.xml
<CustomField>
    <fullName>LSDefaultBudgetedRate__c</fullName>
    <label>Default Budgeted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>