force-app/main/default/objects/GuestroomType__c/fields/LSDefaultBudgetedRooms__c.field-meta.xml
<CustomField>
    <fullName>LSDefaultBudgetedRooms__c</fullName>
    <label>Default Budgeted Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>