force-app/main/default/objects/GuestroomType__c/fields/LSDefaultMinimumAcceptableRate__c.field-meta.xml
<CustomField>
    <fullName>LSDefaultMinimumAcceptableRate__c</fullName>
    <label>Default Minimum Acceptable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>