force-app/main/default/objects/GuestroomType__c/fields/LSDefaultOutOfService__c.field-meta.xml
<CustomField>
    <fullName>LSDefaultOutOfService__c</fullName>
    <label>Default Out Of Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>