force-app/main/default/objects/GuestroomType__c/fields/LSDefaultRackRate__c.field-meta.xml
<CustomField>
    <fullName>LSDefaultRackRate__c</fullName>
    <label>Default Rack Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>