force-app/main/default/objects/GuestroomType__c/fields/LSDefaultTransientProtected__c.field-meta.xml
<CustomField>
    <fullName>LSDefaultTransientProtected__c</fullName>
    <label>Default Transient Protected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>