force-app/main/default/objects/GuestroomType__c/fields/LSRulesJSON__c.field-meta.xml
<CustomField>
    <fullName>LSRulesJSON__c</fullName>
    <label>Rules JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>