force-app/main/default/objects/GuestroomType__c/fields/MaxOccupants__c.field-meta.xml
<CustomField>
    <fullName>MaxOccupants__c</fullName>
    <label>Max Occupants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>