force-app/main/default/objects/GuestroomType__c/fields/NIHRMMigrations_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_ExternalID__c</fullName>
    <externalId>true</externalId>
    <label>Migrations ExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>