force-app/main/default/objects/GuestroomType__c/fields/NumberOfBeds__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBeds__c</fullName>
    <label>Number Of Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>