force-app/main/default/objects/GuestroomType__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Delphi Default Property</fullName>
                </value>
                <value>
                    <fullName>Westwood Inn</fullName>
                </value>
                <value>
                    <fullName>Red Mountain Resort</fullName>
                </value>
                <value>
                    <fullName>Red Mountain Inn</fullName>
                </value>
                <value>
                    <fullName>Strafford Hotel Portsmouth</fullName>
                </value>
                <value>
                    <fullName>Royal Hotel Stratham</fullName>
                </value>
                <value>
                    <fullName>Ashworth by the Sea</fullName>
                </value>
                <value>
                    <fullName>Strafford Horse Sanctuary &amp; Inn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>