force-app/main/default/objects/GuestroomType__c/fields/QuadAllocation__c.field-meta.xml
<CustomField>
    <fullName>QuadAllocation__c</fullName>
    <label>Quad Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>