force-app/main/default/objects/GuestroomType__c/fields/SingleAllocation__c.field-meta.xml
<CustomField>
    <fullName>SingleAllocation__c</fullName>
    <label>Single Allocation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>