force-app/main/default/objects/GuestroomType__c/fields/TripleAllocation__c.field-meta.xml
<CustomField>
    <fullName>TripleAllocation__c</fullName>
    <label>Triple Allocation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>