force-app/main/default/objects/GuestroomType__c/fields/UniqueExternalId__c.field-meta.xml
<CustomField>
    <fullName>UniqueExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Unique External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>